--- a/index.html
+++ b/index.html
@@ -10,23 +10,61 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+</head>
 
 <body>
     <div class="jumbotron jumbotron-fluid">
-            <h1 class="display-4">Weather Dashboard</h1>
-            </head>
-        </div>
-        <div class="container">
-            <input type="text" name= "city" class="form" placeholder="City Name">
-            <button id="submitWeather" class="btn-primary">Search City</button> 
+        <h1 class="display-4">Weather Dashboard</h1>
+        </head>
+    </div>
+    <div class="container">
+        <input type="text" name="city" class="form" placeholder="City Name">
+        <button id="submitWeather" class="btn-primary">Search City</button>
 
-        
+
 
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script>
+        $(document).ready(function () {
+
+
+            $('#submitWeather').click(function () {
+
+                var city = $("#city").val();
+
+                if (city != '') {
+
+                    $.ajax({
+                        url: 'https://openweathermap.org/data/2.5/weather?q=' + city + "&units=imperial" + "&APPID=74c5a6c4845e450aed9034b5f6912291",
+                        type: 'GET',
+                        datatype: "jsonp",
+                        success: function (data) {
+                            var widget = show(data);
+
+                            $("#show").html(widget);
+
+                            $("#city").val();
+
+                        }
+                    })
+
+                } else {
+                    $("#error").html('Field cannot be empty');
+                }
+            });
+
+        });
+
+     function show(data) {
+     return "<h2><strong>Weather</strong>: " + data.weather[0].main + "</h2>"
+            "<h2><strong>Humidity</strong>: " + data.weather[0].main.humidity + "</h2>"
+            "<h2><strong>Wind Speed</strong>: " + data.wind.speed + "</h2>"
+            "<h2><strong></strong>: " + data.weather[0].main + "</h2>"
+        }
+    </script>
 </body>
 
 </html>
